Added interpolators to API; minor updates and corrections

--- a/docstrings/__package__.yaml
+++ b/docstrings/__package__.yaml
@@ -13,6 +13,7 @@ summary: |
 modules:
   - astro
   - interface
+  - math
   - numerical_simulation
   - plotting      # [py]
   - util          # [py]
